--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,13 +26,35 @@ body {
   top: 2rem;
   left: 12rem;
   right: 12rem;
-  height: 100%;
+  height: 120%;
   z-index: -2;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg)scale(1);
+  }
+  50% {
+    transform: rotate(180deg)scale(0.7);
+  }
+  100% {
+    transform: rotate(360deg)scale(1);
+  }
+}
+
+div img:first-child {
+  margin: 10% 10% 0% 10%;
+  animation: spin 5s linear 0s infinite;
+}
+
+div img:nth-child(2) {
+  margin: 10% 0% 0% 15%;
+  animation: spin 7s linear 0s infinite reverse;
 }
 
 #logo {
   display: block;
-  margin: 50px auto 0 auto;
+  margin: 150px auto 0 auto;
   top: 5rem;
   bottom: 5rem;
   left: 50%;
